syntax = "proto3";

option go_package = "./pb";

package pb;

message DecreaseVolumeReq {
  int64 id = 1;
  int64 size = 2;
}

message DecreaseVolumeResp {
}

message FindVolumeReq {
  int64 id = 1;
}

message FindVolumeResp {
  int64 nowVolume = 1;
  int64 totalVolume = 2;
}

message AddVolumeReq {
  int64 id = 1;
  int64 size = 2;
}

message AddVolumeResp {
}

service userCenter {
  rpc decreaseVolume(DecreaseVolumeReq) returns (DecreaseVolumeResp);
  rpc findVolumeById(FindVolumeReq) returns (FindVolumeResp);
  rpc addVolume(AddVolumeReq) returns (AddVolumeResp);
}

//  goctl rpc protoc usercenter.proto --go_out=../ --go-grpc_out=../ --zrpc_out=../ -m  //-m 分组